Add basic HTML page

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,44 @@
 <html>
 <head>
   <title>onehot</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+  <header>
+    <div class="container">
+      <h1>Bringing together people in data</h1>
+      <h3>We're a community of data scientists and ML(Ops) engineers.
+        We're sharing how we work and how we would like to work.</h3>
+      <h3>Join our events to meet like-minded folks and learn about
+        your field.</h3>
+    </div>
+  </header>
+
+  <main>
+    <h2>Events</h2>
+    <div class="event">
+      <h3>Meetup: One-hot encoding</h3>
+      <p><strong>Seakers:</strong> Alma Liezenga (TU Delft), Rob de Wit (Bol.com)</p>
+      <p><strong>Date:</strong> April 04, 2021</p>
+    </div>
+
+    <div class="event">
+      <h3>Meetup: Natural Language Processing</h3>
+      <p><strong>Seakers:</strong> Alma Liezenga (TU Delft), Rob de Wit (Bol.com)</p>
+      <p><strong>Date:</strong> April 04, 2021</p>
+    </div>
+
+    <div class="event">
+      <h3>Meetup: Model operations and deployment</h3>
+      <p><strong>Seakers:</strong> Alma Liezenga (TU Delft), Rob de Wit (Bol.com)</p>
+      <p><strong>Date:</strong> April 04, 2021</p>
+    </div>
+
+    <div class="event">
+      <h3>Meetup: What's the deal with deep learning?</h3>
+      <p><strong>Seakers:</strong> Alma Liezenga (TU Delft), Rob de Wit (Bol.com)</p>
+      <p><strong>Date:</strong> April 04, 2021</p>
+    </div>
+  </main>
 </body>
 </html>
