--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,13 @@
 <body>
   <header>
     <div class="container">
+      <nav>
+        <ul>
+          <li><a href="/">events</a></li>
+          <li><a href="/about">about</a></li>
+          <li><a href="/code-of-conduct">code of conduct</a></li>
+        </ul>
+      </nav>
       <h1>Bringing together people in data</h1>
       <h3>We're a community of data scientists and ML(Ops) engineers.
         We're sharing how we work and how we would like to work.</h3>
