--- a/web/index.html
+++ b/web/index.html
@@ -35,9 +35,9 @@
         {{ speaker.name }} <em>({{ speaker.affiliation }})</em>{{ sep }}
         {% endfor %}
       </p>
-      <a class="rsvp" href="{{ event.meetup_url }}">Details & RSVP</a>
+      <div class="rsvp"><a href="{{ event.meetup_url }}">Details & RSVP</a></div>
       {% if event.video_url %}
-      <a class="video" href="{{ event.video_url }}">Video</a>
+      <div class="video"><a href="{{ event.video_url }}">Video</a></div>
       {% endif %}
     </div>
     {% endfor %}
