Add logo to website

--- a/web/layout.html
+++ b/web/layout.html
@@ -11,6 +11,9 @@
 <body>
   <header>
     <div class="container">
+      <a class="logo" href="/">
+        <img class="logo" src="/logo.svg"/>
+      </a>
       <nav>
         <ul>
           <li {{ active("index.html") }}><a href="/">events</a></li>
