Add a code of conduct

--- a/web/code-of-conduct.html
+++ b/web/code-of-conduct.html
@@ -2,4 +2,24 @@
 
 {% block header %}
 <h1>Code of Conduct</h1>
+
+<p class="large">We want everyone to feel welcome and safe at our events. That's why
+we ask everybody to observe the following rules:</p>
+
+<ol>
+  <li>Be excellent to each other.</li>
+  <li>We absolutely do not allow discrimination or harassment on the
+  basis of gender, race, sexual orientation, appearance, language,
+  tabs vs. spaces, database of choice, CS vs IS, or anything else for
+  that matter.</li>
+  <li>Overly aggressive recruiting or marketing by anyone is not
+  allowed.</li>
+  <li>The general feel is "semi-professional-ish". Feel free to joke
+  and have a tood time, but nothing dirty or off-colour please.</li>
+</ol>
+
+<p class="large"> If you see or experience any issues at a Onehot
+event, please let us know and we'll take action right away. You can
+email us at <a href="mailto:info@onehot.nl">info@onehot.nl</a> or talk
+to one of our organizers at the event.</p>
 {% endblock %}
