--- a/web/about.html
+++ b/web/about.html
@@ -2,7 +2,14 @@
 
 {% block header %}
 <h1>About</h1>
-
-<p class="large">The name is a reference to
+<p class="large">The name of our meetup is a reference to
 <a href="https://en.wikipedia.org/wiki/One-hot">onehot encoding</a>.</p>
+{% endblock %}
+
+{% block main %}
+<h3>Organizers</h3>
+
+<img src="/img/alma.jpg">
+<img src="/img/rob.jpg">
+<img src="/img/laurens.jpg">
 {% endblock %}
