Add various metadata to head

--- a/web/layout.html
+++ b/web/layout.html
@@ -2,12 +2,23 @@
 {% if active_page == page_name %}class="active"{% endif %}
 {%- endmacro %}
 
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
-  <title>onehot</title>
-  <link rel="stylesheet" href="/style.css">
   <meta charset="utf-8">
+  <title>Onehot — data science community</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💬</text></svg>">
+  <link rel="stylesheet" href="/style.css">
+
+  <!-- Metadata -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="We're a community of people who enjoy working with data. We want to bring people from our field together in order to share our experiences and learn from one another.">
+  <meta name="author" content="Onehot">
+  <meta name="keywords" content="Onehot, data, science, community, meetups, conference, event, utrecht, one-hot, 1hot">
+
+  <!-- TODO: Google, Yandex, Microsoft verification -->
+  <!-- TODO: Open graph and icons -->
+
 </head>
 <body>
   <header>
