Remove XML namespace declaration from html elemen
This shouldn't be required for HTML5. This element used to be for XHTML,
but it's no longer in mainstream use today.

See also https://stackoverflow.com/a/14564065/2099958

--- a/web/layout.html
+++ b/web/layout.html
@@ -3,7 +3,7 @@
 {%- endmacro %}
 
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Onehot — data science community</title>
