Add info about Alma & Laurens

--- a/web/about.html
+++ b/web/about.html
@@ -9,7 +9,28 @@
 {% block main %}
 <h3>Organizers</h3>
 
-<img src="/img/alma.jpg">
-<img src="/img/rob.jpg">
-<img src="/img/laurens.jpg">
+<div class="organizers">
+  <div class="organizer">
+    <img src="/img/alma.jpg">
+    <h4>Alma</h4>
+    <p>Alma is a master's student of Engineering & Policy Analysis at
+    TU Delft. She did her bachelor in information sciences with a
+    minor in AI in Utrecht, where she wrote her thesis on automated
+    analysis of breast MRI. She is passionate about imaging, AI and
+    public policy.</p>
+  </div>
+  <div class="organizer">
+    <img src="/img/rob.jpg">
+    <h4>Rob</h4>
+  </div>
+  <div class="organizer">
+    <img src="/img/laurens.jpg">
+    <h4>Laurens</h4>
+    <p>Laurens is obsessed with developer tools/experience, and enjoys
+      scaling infrastructure. He used to lead the DevOps team at
+      <a href="https://channable.com/">Channable</a> and is now helping
+      <a href="https://iterative.ai/">Iterative</a> build tools for ML /
+      AI projects.</p>
+  </div>
+</div>
 {% endblock %}
