Update main copy to the copy from the meetup page

--- a/web/index.html
+++ b/web/index.html
@@ -2,10 +2,16 @@
 
 {% block header %}
 <h1>Bringing together people in data</h1>
-<p class="large">We're a community of data scientists and ML(Ops) engineers.
-We're sharing how we work and how we would like to work.</p>
-<p class="large">We organize meetups and (hopefully) conferences. Join our
-events to meet like-minded folks and learn about your field.</p>
+<p class="large">We're a community of people who enjoy working with
+data. We want to bring people from our field together in order to
+share our experiences and learn from one another. Whether you're a
+data scientist, analyst, engineer, or enthusiast; please feel welcome
+to join us!</p>
+
+<p class="large">Right now we're in the process of organising a series
+of meetups around data-related topics. One day we hope to organise
+conferences as well! Join our events to meet like-minded folks to
+learn more about our field.</p>
 {% endblock %}
 
 {% block main %}
