Expand about us section and include contact info

--- a/web/about.html
+++ b/web/about.html
@@ -2,12 +2,32 @@
 
 {% block header %}
 <h1>About</h1>
-<p class="large">The name of our meetup is a reference to
-<a href="https://en.wikipedia.org/wiki/One-hot">onehot encoding</a>.</p>
+<p class="large">Onehot is a community for people passionate about data science.
+We are centered in Utrecht, the Netherlands.</p>
+
+<p class="large">We want to build an inclusive community where everyone is
+  welcome to share and learn. Whether you are a practicioner or student, analyst
+  or engineer; please feel free to join us in this endeavour!
+</p>
+
+<p class="large">Currently we are organising a series of five meet-ups. Our
+  dream is to organise a full-fledged conference one day.
+</p>
+
+<p class="large">The name of our community is a reference to
+<a href="https://en.wikipedia.org/wiki/One-hot">one-hot encoding</a>.</p>
 {% endblock %}
 
+<h2>Get in touch</h2>
+<p class="large">Please reach out to us if you have questions or suggestions,
+  would like to speak at one of our events, or are willing to sponsor us. Same
+  goes if you just want to say hi: we love hearing from you!</p>
+
+<p class="large"><a href="mailto:organisation@onehot.nl">organisation@onehot.nl
+</a></p>
+
 {% block main %}
-<h3>Organizers</h3>
+<h3>Organisers</h3>
 
 <div class="organizers">
   <div class="organizer">
