Add Rob's details to about page

--- a/web/about.html
+++ b/web/about.html
@@ -16,15 +16,15 @@ We are centered in Utrecht, the Netherlands.</p>
 
 <p class="large">The name of our community is a reference to
 <a href="https://en.wikipedia.org/wiki/One-hot">one-hot encoding</a>.</p>
-{% endblock %}
 
-<h2>Get in touch</h2>
+<h3>Get in touch</h3>
 <p class="large">Please reach out to us if you have questions or suggestions,
   would like to speak at one of our events, or are willing to sponsor us. Same
   goes if you just want to say hi: we love hearing from you!</p>
 
 <p class="large"><a href="mailto:organisation@onehot.nl">organisation@onehot.nl
 </a></p>
+{% endblock %}
 
 {% block main %}
 <h3>Organisers</h3>
@@ -32,7 +32,7 @@ We are centered in Utrecht, the Netherlands.</p>
 <div class="organizers">
   <div class="organizer">
     <img src="/img/alma.jpg">
-    <h4>Alma</h4>
+    <h4>Alma Liezenga</h4>
     <p>Alma is a master's student of Engineering & Policy Analysis at
     TU Delft. She did her bachelor in information sciences with a
     minor in AI in Utrecht, where she wrote her thesis on automated
@@ -41,11 +41,15 @@ We are centered in Utrecht, the Netherlands.</p>
   </div>
   <div class="organizer">
     <img src="/img/rob.jpg">
-    <h4>Rob</h4>
+    <h4>Rob de Wit</h4>
+    <p>Rob likes using data as a tool to explain the world and improve upon it.
+    He currently works as a data analyst in the fraud and risk team at
+    <a href="https://bol.com">bol.com</a> where he gets to combat crooks. His
+  favourite colour is #F72585.</p>
   </div>
   <div class="organizer">
     <img src="/img/laurens.jpg">
-    <h4>Laurens</h4>
+    <h4>Laurens Duijvesteijn</h4>
     <p>Laurens is obsessed with developer tools/experience, and enjoys
       scaling infrastructure. He used to lead the DevOps team at
       <a href="https://channable.com/">Channable</a> and is now helping
