Add color background to Rob's favourite color

--- a/web/about.html
+++ b/web/about.html
@@ -45,7 +45,7 @@ We are centered in Utrecht, the Netherlands.</p>
     <p>Rob likes using data as a tool to explain the world and improve upon it.
     He currently works as a data analyst in the fraud and risk team at
     <a href="https://bol.com">bol.com</a> where he gets to combat crooks. His
-  favourite colour is #F72585.</p>
+    favourite colour is <span class="rob-color">#F72585</span>.</p>
   </div>
   <div class="organizer">
     <img src="/img/laurens.jpg">
