Include rel tags in URLs to outside

--- a/web/about.html
+++ b/web/about.html
@@ -15,7 +15,7 @@ We are centered in Utrecht, the Netherlands.</p>
 </p>
 
 <p class="large">The name of our community is a reference to
-<a href="https://en.wikipedia.org/wiki/One-hot">one-hot encoding</a>.</p>
+<a href="https://en.wikipedia.org/wiki/One-hot" target="_blank" rel="noreferrer">one-hot encoding</a>.</p>
 
 <h3>Get in touch</h3>
 <p class="large">Please reach out to us if you have questions or suggestions,
