Include a few more rel attributes and provide alt texts for images

--- a/web/about.html
+++ b/web/about.html
@@ -31,7 +31,7 @@ We are centered in Utrecht, the Netherlands.</p>
 
 <div class="organizers">
   <div class="organizer">
-    <img src="/img/alma.jpg">
+    <img src="/img/alma.jpg" alt="Photograph of Alma Liezenga">
     <h4>Alma Liezenga</h4>
     <p>Alma is a master's student of Engineering & Policy Analysis at
     TU Delft. She did her bachelor in information sciences with a
@@ -40,20 +40,20 @@ We are centered in Utrecht, the Netherlands.</p>
     public policy.</p>
   </div>
   <div class="organizer">
-    <img src="/img/rob.jpg">
+    <img src="/img/rob.jpg" alt="Photograph of Rob de Wit">
     <h4>Rob de Wit</h4>
     <p>Rob likes using data as a tool to explain the world and improve upon it.
     He currently works as a data analyst in the fraud and risk team at
-    <a href="https://bol.com">bol.com</a> where he gets to combat crooks. His
+    <a href="https://bol.com" target="_blank" rel="noreferrer">bol.com</a> where he gets to combat crooks. His
     favourite colour is <span class="rob-color">#F72585</span>.</p>
   </div>
   <div class="organizer">
-    <img src="/img/laurens.jpg">
+    <img src="/img/laurens.jpg" alt="Photograph of Laurens Duijvesteijn">
     <h4>Laurens Duijvesteijn</h4>
     <p>Laurens is obsessed with developer tools/experience, and enjoys
       scaling infrastructure. He used to lead the DevOps team at
-      <a href="https://channable.com/">Channable</a> and is now helping
-      <a href="https://iterative.ai/">Iterative</a> build tools for ML /
+      <a href="https://channable.com/" target="_blank" rel="noreferrer">Channable</a> and is now helping
+      <a href="https://iterative.ai/" target="_blank" rel="noreferrer">Iterative</a> build tools for ML /
       AI projects.</p>
   </div>
 </div>
