--- a/web/layout.html
+++ b/web/layout.html
@@ -24,7 +24,7 @@
   <header>
     <div class="container">
       <a class="logo" href="/">
-        <img class="logo" src="/logo.svg"/>
+        <img class="logo" src="/logo.svg" alt="Onehot logo"/>
       </a>
       <nav>
         <ul>
