Make p.large the default style

--- a/web/about.html
+++ b/web/about.html
@@ -2,27 +2,27 @@
 
 {% block header %}
 <h1>About</h1>
-<p class="large">Onehot is a community for people passionate about data science.
+<p>Onehot is a community for people passionate about data science.
 We are centered in Utrecht, the Netherlands.</p>
 
-<p class="large">We want to build an inclusive community where everyone is
+<p>We want to build an inclusive community where everyone is
   welcome to share and learn. Whether you are a practicioner or student, analyst
   or engineer; please feel free to join us in this endeavour!
 </p>
 
-<p class="large">Currently we are organising a series of five meet-ups. Our
+<p>Currently we are organising a series of five meet-ups. Our
   dream is to organise a full-fledged conference one day.
 </p>
 
-<p class="large">The name of our community is a reference to
+<p>The name of our community is a reference to
 <a href="https://en.wikipedia.org/wiki/One-hot" target="_blank" rel="noreferrer">one-hot encoding</a>.</p>
 
 <h3>Get in touch</h3>
-<p class="large">Please reach out to us if you have questions or suggestions,
+<p>Please reach out to us if you have questions or suggestions,
   would like to speak at one of our events, or are willing to sponsor us. Same
   goes if you just want to say hi: we love hearing from you!</p>
 
-<p class="large"><a href="mailto:organisation@onehot.nl">organisation@onehot.nl
+<p><a href="mailto:organisation@onehot.nl">organisation@onehot.nl
 </a></p>
 {% endblock %}
 
@@ -33,7 +33,7 @@ We are centered in Utrecht, the Netherlands.</p>
   <div class="organizer">
     <img src="/img/alma.jpg" alt="Photograph of Alma Liezenga">
     <h4>Alma Liezenga</h4>
-    <p>Alma is a master's student of Engineering & Policy Analysis at
+    <p class="small">Alma is a master's student of Engineering & Policy Analysis at
     TU Delft. She did her bachelor in information sciences with a
     minor in AI in Utrecht, where she wrote her thesis on automated
     analysis of breast MRI. She is passionate about imaging, AI and
@@ -42,7 +42,7 @@ We are centered in Utrecht, the Netherlands.</p>
   <div class="organizer">
     <img src="/img/rob.jpg" alt="Photograph of Rob de Wit">
     <h4>Rob de Wit</h4>
-    <p>Rob likes using data as a tool to explain the world and improve upon it.
+    <p class="small">Rob likes using data as a tool to explain the world and improve upon it.
     He currently works as a data analyst in the fraud and risk team at
     <a href="https://bol.com" target="_blank" rel="noreferrer">bol.com</a> where he gets to combat crooks. His
     favourite colour is <span class="rob-color">#F72585</span>.</p>
@@ -50,7 +50,7 @@ We are centered in Utrecht, the Netherlands.</p>
   <div class="organizer">
     <img src="/img/laurens.jpg" alt="Photograph of Laurens Duijvesteijn">
     <h4>Laurens Duijvesteijn</h4>
-    <p>Laurens is obsessed with developer tools/experience, and enjoys
+    <p class="small">Laurens is obsessed with developer tools/experience, and enjoys
       scaling infrastructure. He used to lead the DevOps team at
       <a href="https://channable.com/" target="_blank" rel="noreferrer">Channable</a> and is now helping
       <a href="https://iterative.ai/" target="_blank" rel="noreferrer">Iterative</a> build tools for ML /
