--- a/web/index.html
+++ b/web/index.html
@@ -2,13 +2,13 @@
 
 {% block header %}
 <h1>Bringing together people in data</h1>
-<p class="large">We're a community of people who enjoy working with
+<p>We're a community of people who enjoy working with
 data. We want to bring people from our field together in order to
 share our experiences and learn from one another. Whether you're a
 data scientist, analyst, engineer, or enthusiast; please feel welcome
 to join us!</p>
 
-<p class="large">Right now we're in the process of organising a series
+<p>Right now we're in the process of organising a series
 of meetups around data-related topics. One day we hope to organise
 conferences as well! Join our events to meet like-minded folks to
 learn more about our field.</p>
@@ -33,6 +33,6 @@ learn more about our field.</p>
     {% endif %}
 </div>
 {% else %}
-<p class="large">No events announced yet. Watch this space!</p>
+<p>No events announced yet. Watch this space!</p>
 {% endfor %}
 {% endblock %}
