--- a/web/code-of-conduct.html
+++ b/web/code-of-conduct.html
@@ -3,12 +3,12 @@
 {% block header %}
 <h1>Code of Conduct</h1>
 
-<p class="large">We want to be an inclusive community where everyone can feel
+<p>We want to be an inclusive community where everyone can feel
   safe and welcome. That is why we want everyone to respect a set of ground
   rules, both online and during events organised by Onehot.
 </p>
 
-<p class="large">By taking part in our community, you agree to the following
+<p>By taking part in our community, you agree to the following
   rules:</p>
 
 <ol>
@@ -25,10 +25,10 @@
     to joke and have a good time, but please stay away from dirty or off-colour.
 </ol>
 
-<p class="large">Failure to comply with these rules will result in your removal
+<p>Failure to comply with these rules will result in your removal
   at the discretion of the organisation.</p>
 
-<p class="large">If you see or experience any issues at a Onehot
+<p>If you see or experience any issues at a Onehot
 event, please let us know and we will take action right away. You can
 email us at <a href="mailto:organisation@onehot.nl">organisation@onehot.nl</a>
 or talk to one of our organisers at the event.</p>
