Drop rel="noreferrer"
We already ensure referral privacy in production using the
Referrer-Policy header.

--- a/web/about.html
+++ b/web/about.html
@@ -15,7 +15,7 @@ We are centered in Utrecht, the Netherlands.</p>
 </p>
 
 <p>The name of our community is a reference to
-<a href="https://en.wikipedia.org/wiki/One-hot" target="_blank" rel="noreferrer">one-hot encoding</a>.</p>
+<a href="https://en.wikipedia.org/wiki/One-hot" target="_blank">one-hot encoding</a>.</p>
 
 <h3>Get in touch</h3>
 <p>Please reach out to us if you have questions or suggestions,
@@ -44,7 +44,7 @@ We are centered in Utrecht, the Netherlands.</p>
     <h4>Rob de Wit</h4>
     <p class="small">Rob likes using data as a tool to explain the world and improve upon it.
     He currently works as a data analyst in the fraud and risk team at
-    <a href="https://bol.com" target="_blank" rel="noreferrer">bol.com</a> where he gets to combat crooks. His
+    <a href="https://bol.com" target="_blank">bol.com</a> where he gets to combat crooks. His
     favourite colour is <span class="rob-color">#F72585</span>.</p>
   </div>
   <div class="organizer">
@@ -52,8 +52,8 @@ We are centered in Utrecht, the Netherlands.</p>
     <h4>Laurens Duijvesteijn</h4>
     <p class="small">Laurens is obsessed with developer tools/experience, and enjoys
       scaling infrastructure. He used to lead the DevOps team at
-      <a href="https://channable.com/" target="_blank" rel="noreferrer">Channable</a> and is now helping
-      <a href="https://iterative.ai/" target="_blank" rel="noreferrer">Iterative</a> build tools for ML /
+      <a href="https://channable.com/" target="_blank">Channable</a> and is now helping
+      <a href="https://iterative.ai/" target="_blank">Iterative</a> build tools for ML /
       AI projects.</p>
   </div>
 </div>
