--- a/web/pages/code-of-conduct.html
+++ b/web/pages/code-of-conduct.html
@@ -23,7 +23,7 @@ url: "/code-of-conduct"
   or anything else for that matter.</li>
   <li>We do not tolerate sexual language and imagery. Our community and events
   are not an appropriate outlet for that.</li>
-  <li>We do not allow overly aggresive marketing or recruiting from anyone.</li>
+  <li>We do not allow overly aggressive marketing or recruiting from anyone.</li>
   <li>We want to have a generally "semi-professional-ish" atmosphere. Feel free
     to joke and have a good time, but please stay away from dirty or off-colour.
 </ol>
