--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -5,15 +5,15 @@ url: "/"
 
 {% block header %}
 <h1>Bringing together people in data</h1>
-<p>We're a community of people who enjoy working with
+<p>We are a community of people who enjoy working with
 data. We want to bring people from our field together in order to
-share our experiences and learn from one another. Whether you're a
+share our experiences and learn from one another. Whether you are a
 data scientist, analyst, engineer, or enthusiast; please feel welcome
 to join us!</p>
 
-<p>Right now we're in the process of organising a series
+<p>Right now we are in the process of organising a series
 of meetups around data-related topics. One day we hope to organise
-conferences as well! Join our events to meet like-minded folks to
+conferences as well! Join our events to meet like-minded folks and
 learn more about our field.</p>
 {% endblock %}
 
