Add Meetup link

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -37,5 +37,11 @@ learn more about our field.</p>
 </div>
 {% else %}
 <p>No events announced yet. Watch this space!</p>
+
+<h2>Elsewhere</h2>
+
+<p>Join us on <a href="https://www.meetup.com/onehot/"
+target="_blank">Meetup!</a></p>
+
 {% endfor %}
 {% endblock %}
