Move photographs organisation to dedicated folder

--- a/web/pages/about.html
+++ b/web/pages/about.html
@@ -34,7 +34,7 @@ We are centered in Utrecht, the Netherlands.</p>
 
 <div class="organizers">
   <div class="organizer">
-    <img src="/img/alma.jpg" alt="Photograph of Alma Liezenga">
+    <img src="/img/organisation/alma.jpg" alt="Photograph of Alma Liezenga">
     <h4>Alma Liezenga</h4>
     <p class="small">Alma is a master's student of Engineering & Policy Analysis at
     TU Delft. She did her bachelor in information sciences with a
@@ -43,7 +43,7 @@ We are centered in Utrecht, the Netherlands.</p>
     public policy.</p>
   </div>
   <div class="organizer">
-    <img src="/img/rob.jpg" alt="Photograph of Rob de Wit">
+    <img src="/img/organisation/rob.jpg" alt="Photograph of Rob de Wit">
     <h4>Rob de Wit</h4>
     <p class="small">Rob likes using data as a tool to explain the world and improve upon it.
     He currently works as a data analyst in the fraud and risk team at
@@ -51,7 +51,7 @@ We are centered in Utrecht, the Netherlands.</p>
     favourite colour is <span class="rob-color">#F72585</span>.</p>
   </div>
   <div class="organizer">
-    <img src="/img/laurens.jpg" alt="Photograph of Laurens Duijvesteijn">
+    <img src="/img/organisation/laurens.jpg" alt="Photograph of Laurens Duijvesteijn">
     <h4>Laurens Duijvesteijn</h4>
     <p class="small">Laurens is obsessed with developer tools/experience, and enjoys
       scaling infrastructure. He used to lead the DevOps team at
