Add Discord link

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -41,7 +41,8 @@ learn more about our field.</p>
 <h2>Elsewhere</h2>
 
 <p>Join us on <a href="https://www.meetup.com/onehot/"
-target="_blank">Meetup!</a></p>
+target="_blank">Meetup</a> and <a href="https://discord.gg/5Y8g3EWBZ2"
+target="_blank">Discord</a>!</p>
 
 {% endfor %}
 {% endblock %}
