Add icons for Discord and Meetup

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -40,9 +40,17 @@ learn more about our field.</p>
 
 <h2>Elsewhere</h2>
 
-<p>Join us on <a href="https://www.meetup.com/onehot/"
-target="_blank">Meetup</a> and <a href="https://discord.gg/5Y8g3EWBZ2"
-target="_blank">Discord</a>!</p>
+<p>
+  Join us on
+  <a class="icon-link" href="https://www.meetup.com/onehot/" target="_blank">
+    <img class="icon" src="/img/meetup.svg">
+    <span class="text">Meetup</span>
+  </a>
+  and
+  <a class="icon-link" href="https://discord.gg/5Y8g3EWBZ2" target="_blank">
+    <img class="icon discord" src="/img/discord.svg">
+    <span class="text">Discord</span></a>!
+</p>
 
 {% endfor %}
 {% endblock %}
