Move icons to `img/icons`

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -43,12 +43,12 @@ learn more about our field.</p>
 <p>
   Join us on
   <a class="icon-link" href="https://www.meetup.com/onehot/" target="_blank">
-    <img class="icon" src="/img/meetup.svg">
+    <img class="icon" src="/img/icons/meetup.svg">
     <span class="text">Meetup</span>
   </a>
   and
   <a class="icon-link" href="https://discord.gg/5Y8g3EWBZ2" target="_blank">
-    <img class="icon discord" src="/img/discord.svg">
+    <img class="icon discord" src="/img/icons/discord.svg">
     <span class="text">Discord</span></a>!
 </p>
 
