Link to event pages

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -30,7 +30,7 @@ learn more about our field.</p>
     {{ speaker.name }} <em>({{ speaker.affiliation }})</em>{{ sep }}
     {% endfor %}
     </p>
-    <div class="rsvp"><a href="{{ event.meetup_url }}" target="_blank">Details & RSVP</a></div>
+    <div class="rsvp"><a href="{{ event.url }}">Details & RSVP</a></div>
     {% if event.video_url %}
     <div class="video"><a href="{{ event.video_url }}" target="_blank">Video</a></div>
     {% endif %}
