Add blurb to data model

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -22,7 +22,7 @@ learn more about our field.</p>
 {% for event in events %}
 <div class="event">
     <h4 class="title">Meetup: {{ event.title }}</h4>
-    <p class="description">{{ event.description }}</p>
+    <p class="description">{{ event.blurb }}</p>
     <p class="date"><strong>Date:</strong> {{ event.date }}</p>
     <p class="speakers">
     <strong>Speakers:</strong>
