--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -20,7 +20,7 @@ learn more about our field.</p>
 {% block main %}
 <h2>Events</h2>
 {% for event in events %}
-<div class="event_list">
+<div class="event-list">
   <div class="event">
       <h4 class="title"><a href="{{ event.url }}">Meetup: {{ event.title }}</a></h4>
       <h4 class="date"> {{ event.date }}</h4>
