Link to Discord settings page

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -58,4 +58,10 @@ learn more about our field.</p>
     <img class="icon discord" src="/img/icons/discord.svg">
     <span class="text">Discord</span></a>!
 </p>
+
+<p class="small">
+  If you join us on Discord, you need
+  to <a href="/discord-settings">configure your voice settings</a> if
+  you'd like to ask questions during the meetup.
+</p>
 {% endblock %}
