Add Bianca to organizers page

--- a/web/pages/about.html
+++ b/web/pages/about.html
@@ -59,5 +59,13 @@ We are centered in Utrecht, the Netherlands.</p>
       <a href="https://iterative.ai/" target="_blank">Iterative</a> build tools for ML /
       AI projects.</p>
   </div>
+  <div class="organizer">
+    <img src="/img/organisation/bianca.jpg" alt="Photograph of Bianca Beerepoot">
+    <h4>Bianca Beerepoot</h4>
+    <p class="small">Bianca has always been passionate about everything that
+    has to do with data. Currently, she works at First Technology as a
+    developer, where she analyzes and optimizes processes for clients. In her
+    eyes, a project is only a success when the user experience is perfect.</p>
+  </div>
 </div>
 {% endblock %}
